[package]
name = "www-gwmc-vip"
version = "0.1.0"
edition = "2021"
authors = ["临来笑笑生 <luck@elapse.date>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/

#tokio = { version="1.17.0", features=["full"]}
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread","fs"] }
warp = { version = "0.3.2", features = ["tls","multipart"] }

# diesel是Rust的ORM(对象关系映射器)和查询构建器
# diesel为PostgreSQL、Mysql及SQLite提供了开箱即用的支持
diesel = { version="1.4.8",features=["extras","postgres","r2d2"] }

# 模板-隔离RUST和HTML
# 基本用法: https://handlebarsjs.com/zh/guide/expressions.html#%E5%9F%BA%E6%9C%AC%E7%94%A8%E6%B3%95
# handlebars = "4.2.2"
handlebars = "4.3.1"

# 加载环境配置文件.env
dotenv = "0.15.0"

lazy_static = "1.4.0"

# json
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = {version = "1.0"}
serde_derive = "1.0.136"

# 时间与日期 (带features = ["serde"],时间才能使用Deserialize, Serialize的特征)
chrono = { version="0.4.19", features = ["serde"] }

# 随机
rand = "0.8.5"

# 日志
env_logger = "0.9.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"